@@ -6,6 +6,7 @@ Revision history for Perl extension {{$dist->name}}
     - removed Class::MethodMaker definitions
     - added Moose definitions
     - removed duplicates
+    - added dedup test
 
 1.100710  2010-03-12 00:48:03 Europe/Vienna
     - converted the distribution to Dist::Zilla-style
